# conway_game_of_life

./: .gitignore  CMakeLists.txt  Makefile  ReadMe.md  main.cpp  test.cpp
benchmark_results/: benchmark_results.json  diagram.py  mpi_benchmark_results.json
benchmarks/: benchmark.cpp  benchmark_mpi.cpp
include/: state.h  state_mpi.h
src/: state.cpp  state_mpi.cpp
tests/: test_state.cpp
